{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "Player",
            "id": "fd3d1ec9-8a83-4bc7-90ec-e5b920622e4f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1ab0167e-b729-42a8-bea7-f59ccd0a4100",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7ee98c3f-51bc-4e85-9067-935de02dfc28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "dbc43f50-e817-44c6-9c6d-d50003ecc820",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1a459e6a-6c26-446e-a342-144d7bc5ea7c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "337b615c-3af6-44ac-8a58-78c8d9effb4d",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-0.1,max=0.1),Invert",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SkillAttack01",
                    "type": "Button",
                    "id": "2ed6b314-ed91-4d62-872e-e2febceaa4fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "55122097-0bd6-4928-b3c0-1539f2b0582d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "78771d29-d3f4-4a89-a0d0-cbc4dc64faac",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d4689e5d-67ee-46d0-9d42-d9caab549a86",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "60b24462-15c5-43c6-80ac-e203777135c9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f9e235a-f5b8-4ac1-bccb-e2deea3fc9a1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a626a80e-b92a-4f29-941e-3f0a0469e08b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3b38c191-53c2-4ca1-97bd-6b9627c7fb00",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85223228-6645-4c1f-9742-09e8d70e4bf6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84b0c5b4-39b0-408e-9566-31b9692a0f50",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c529e3c1-5e51-4946-b063-91a9f0088343",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "140ae274-1275-4e0c-b6c6-b5be334f789c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillAttack01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0df0c7ea-42a1-4337-819f-456b2899fc6c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}